--- a/HypergraphAnalysis.ipynb
+++ b/HypergraphAnalysis.ipynb
@@ -60,7 +60,8 @@
     "    sigToGenes[sigs[i]] = sigGenes[i].split(',')\n",
     "genes = set()\n",
     "for genes_list in sigToGenes.values():\n",
-    "    genes.update(genes_list)"
+    "    genes.update(genes_list)\n",
+    "metabolicGenes = set('ATP9A', 'KCNB1', 'AKAP1', 'CDON', 'INSR')\n"
    ]
   },
   {
